<resources>
    <string name="app_name">DGCT</string>
    <string name="dg_canteen">智慧食堂</string>

    <string name="input_password">输入密码</string>
    <string name="btn_delete">删除</string>
    <string name="btn_sure">确定</string>
    <string name="btn_save">保存</string>
    <string name="btn_back">返回</string>

    <string name="shop_meal">已选菜品</string>
    <string name="scan_face_pay">刷脸支付</string>
    <string name="scan_qrcode_pay">扫码支付</string>
    <string name="meal_sure">确定取餐</string>
    <string name="total_title">共</string>
    <string name="a_copy">份</string>

    <string name="unOpen_meal">&#160;&#160;&#160;&#160;未开餐&#160;&#160;&#160;&#160;</string>

    <string name="pay_success_title">支付成功</string>
    <string name="pay_failure_title">支付失败</string>
    <string name="order_money">订单金额</string>
    <string name="pay_time">支付时间</string>
    <string name="trans_run_number">交易流水号</string>
    <string name="pay_failure_reason">当前状态</string>

    <string name="total_price">合计￥：</string>
    <string name="init_money">0.0元</string>
    <string name="init_count">0</string>
    <string name="money_format">￥%s</string>

    <string name="setting">设置</string>
    <string name="service_address">服务器地址</string>
    <string name="mqtt_service_address">MQTT服务地址</string>
    <string name="mqtt_account_number">MQTT账号</string>
    <string name="mqtt_password">MQTT密码</string>
    <string name="off_line_scan_face">离线刷脸模式</string>
    <string name="dishes_manage">菜品管理</string>
    <string name="shelf">上架</string>
    <string name="under_shelf">下架</string>
    <string name="taken_down">已下架</string>
    <string name="meal_category">餐别</string>
    <string name="syn_dish">同步菜品</string>
    <string name="syn_dish_data">同步菜品数据</string>
    <string name="syn_final_time">菜品数据最后同步时间</string>
    <string name="check_update">检查更新</string>
    <string name="syn_person">同步人员信息</string>
    <string name="exit_alive">退出保活</string>
    <string name="search_name">姓名：</string>
    <string name="search_icn">卡号：</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="baud">
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
    </string-array>

    <string-array name="spiCard">
        <item>16进制</item>
        <item>W26(直转)</item>
        <item>W26(反序)</item>
    </string-array>

    <string-array name="spVerify">
        <item>刷脸核销</item>
        <item>刷卡/扫码核销</item>
    </string-array>
</resources>