<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_hit_pic"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/ic_pay_failure" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="李**"
            android:textColor="#AA2A2A"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:text="@string/pay_failure_title"
            android:textColor="#AA2A2A"
            android:textSize="48sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/tv_title_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/pay_failure_reason"
            android:textColor="#6C6C6C"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/pay_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:minHeight="50dp"
            android:text=""
            android:textColor="#6C6C6C"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/pay_time"
            android:textColor="#6C6C6C"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:minHeight="50dp"
            android:text=""
            android:textColor="#6C6C6C"
            android:textSize="35sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_btn_bg"
        android:gravity="center"
        android:text="@string/btn_back"
        android:textColor="#215476"
        android:textSize="25sp" />

</LinearLayout>
