<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/meal_time"
            android:layout_width="wrap_content"
            android:minWidth="330dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:text="@string/unOpen_meal"
            android:textSize="28sp"
            android:paddingStart="27dp"
            android:paddingEnd="20dp"
            android:background="@drawable/shape_tv_bg"
            android:layout_centerVertical="true"
            android:drawableStart="@drawable/ic_noodles"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:text="@string/dg_canteen"
            android:textStyle="bold"
            android:textColor="#4095E5"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/select_stopper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textSize="24sp"
            android:textColor="#4F4F4F"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/one_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="8"
            android:background="@drawable/shape_tv_bg_15"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <TextView
                android:id="@+id/dish_type1"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="主食"
                android:textStyle="bold"
                android:textSize="70sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_press_bt_bg_green"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_man_info"
                android:background="@drawable/shape_tv_bg_15"
                android:padding="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:overScrollMode="never"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:weightSum="8"
            android:padding="15dp"
            android:background="@drawable/shape_tv_bg_15"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dish_type2"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="菜品"
                android:textStyle="bold"
                android:textSize="70sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/common_bt_bg"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_man_info2"
                android:background="@drawable/shape_tv_bg_15"
                android:padding="15dp"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:overScrollMode="never"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_tv_bg_15"
                android:layout_height="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="合计金额："
                        android:textColor="#101010"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tv_total_money"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/init_money"
                        android:textColor="@color/red"
                        android:textSize="40sp" />

                    <TextView
                        android:layout_marginStart="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_title"
                        android:textColor="#101010"
                        android:textSize="40sp" />

                    <TextView
                        android:layout_marginHorizontal="10dp"
                        android:id="@+id/tv_total_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:text="@string/init_count"
                        android:textSize="40sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/a_copy"
                        android:textColor="#101010"
                        android:textSize="40sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/confirm"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="20dp"
                    android:background="@drawable/common_bt_bg"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/meal_sure"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="40sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>