<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1280px"
    android:layout_height="800px"
    >

    <ImageView
        android:id="@+id/iv_hit_pic"
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/ic_pay_failure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="192px"
        android:layout_height="70px"
        android:text="@string/pay_failure_title"
        android:textColor="#AA2A2A"
        android:textSize="48px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_hit_pic" />


    <TextView
        android:id="@+id/tv_title_reason"
        android:layout_width="110px"
        android:layout_height="wrap_content"
        android:layout_marginStart="410px"
        android:layout_marginTop="42px"
        android:text="@string/pay_failure_reason"
        android:textColor="#6C6C6C"
        android:textSize="25px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_title_time"
        android:layout_width="110px"
        android:layout_height="wrap_content"
        android:layout_marginTop="25px"
        android:text="@string/pay_time"
        android:textColor="#6C6C6C"
        android:textSize="25px"
        app:layout_constraintStart_toStartOf="@+id/tv_title_reason"
        app:layout_constraintTop_toBottomOf="@+id/pay_fail_msg" />

<!--    <Button-->
<!--        android:id="@+id/bt_back"-->
<!--        android:layout_width="180px"-->
<!--        android:layout_height="50px"-->
<!--        android:layout_marginBottom="50px"-->
<!--        android:background="@drawable/shape_btn_bg"-->
<!--        android:text="@string/btn_back"-->
<!--        android:textColor="#215476"-->
<!--        android:textSize="20px"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.49"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <TextView
        android:id="@+id/pay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="#6C6C6C"
        android:textSize="25px"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_time"
        app:layout_constraintEnd_toEndOf="@+id/pay_fail_msg" />

    <TextView
        android:id="@+id/pay_fail_msg"
        android:layout_width="182px"
        android:layout_height="wrap_content"
        android:layout_marginEnd="410px"
        android:layout_marginTop="8px"
        android:gravity="right"
        android:maxLines="2"
        android:text="失败原因"
        android:textColor="#6C6C6C"
        android:textSize="25px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_reason" />

</androidx.constraintlayout.widget.ConstraintLayout>