<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/on_off_line"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparency"
            android:src="@drawable/ic_drama"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/server"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/transparency"
            android:src="@drawable/ic_server"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/network"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@color/transparency"
            android:src="@drawable/ic_wifi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:format24Hour="yyyy-MM-dd HH:mm:ss"
            android:gravity="center"
            android:text="2023-12-12 12:20:50"
            android:textColor="#4F4F4F"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/on_off_line"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meal_time"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/shape_tv_bg"
            android:gravity="center"
            android:minWidth="350dp"
            android:text="@string/unOpen_meal"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/dg_canteen"
            android:textColor="#4095E5"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_menu_ct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vl_common_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vl_common_set"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@color/creamy_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_btn_one"
            android:text="@string/setting"
            android:textColor="#4F4F4F"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_dish_menu"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_btn_one"
            android:text="@string/dishes_manage"
            android:textColor="#4F4F4F"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_setting" />

        <Button
            android:id="@+id/btn_syn_dishes"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_btn_one"
            android:text="@string/syn_dish"
            android:textColor="#4F4F4F"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dish_menu" />

        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="今日订餐人数:"
            android:textColor="#4F4F4F"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_syn_dishes" />

        <TextView
            android:id="@+id/tv_verification_number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="今日已核销人数:"
            android:textColor="#4F4F4F"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_number" />

        <TextView
            android:id="@+id/tv_meal_person"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="订餐人数:"
            android:textColor="#4F4F4F"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_number" />

        <TextView
            android:id="@+id/tv_meal_verify"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="核销人数:"
            android:textColor="#4F4F4F"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meal_person" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>